fixed error messsage bug on mobile

--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ input[type=button] {
   font-size: 130%;
   margin: 10px 0px 20px 0px;
   cursor: pointer;
+  /* removes ugly iOS styling */
+  -webkit-appearance: none;
 }
 
 input[type=button]:hover {
@@ -54,10 +56,7 @@ input[type=button]:hover {
 }
 
 #error-message {
-  /*font-size: 170%;*/
   display: inline-block;
-  /*background-color: rgba(221, 73, 19, 1); /* orange */*/
-  /*display: none;*/
 }
 
 /*========================
@@ -66,7 +65,6 @@ Weather Response
 p {
   padding-left: 10px;
   padding-right: 10px;
-  /*background-color: rgba(221, 73, 19, 1);*/
   font-size: 180%;
   margin-block-start: 0;
   margin-block-end: 0;
@@ -119,10 +117,8 @@ p {
     padding-right: 5px;
     margin-left: 1em;
     margin-bottom: 1em;
-    font-size: 25px;
-    background-color: initial;
+    font-size: 22px;
     display: block;
-    display: none;
   }
 
   .mintemp-result, .maxtemp-result, .humidity-result, .currenttemp-result, .weather-result {
@@ -150,7 +146,7 @@ p {
   }
 
   input[type=button] {
-    padding: 10px 8px;
+    padding: 8px 10px;
   }
 
 
